[package]
name = "smol-cancellation-token"
version = "0.1.1"
edition = "2021"
description = "A simple cancellation token implementation for Smol, copied from tokio-util's cancellation token, and replace the `waker` with `EventListener` to make it cross async runtime compatible."
license = "MIT"
authors = ["Petard Jonson <i@a632079.me>"]
repository = "https://github.com/greenhat616/smol-cancellation-token"

[lib]
doctest = false

[dependencies]
event-listener = "5"
pin-project-lite = "0.2"

[dev-dependencies]
futures = "0.3"
